--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -172,7 +172,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 @media (min-width: 630px) {
     .header .last_header {
