--- a/src/Components/Cart.css
+++ b/src/Components/Cart.css
@@ -26,23 +26,29 @@
 	align-items: center;
 }
 .cart .empty_cart h2 {
-	text-align: center;
-	text-transform: uppercase;
-	font-size: 18px;
-	color: var(--black-color);
-	letter-spacing: 1px;
+    color: #232323;
+    color: var(--black-color);
+    font-size: 18px;
+    letter-spacing: 1px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 38px;
+    padding-inline: 11px;
 }
 .cart .empty_cart button {
-	margin-left: 45%;
-	padding: 10px 30px;
-	margin-top: 10px;
-	background: var(--yellow-color);
-	color: var(--pink-color);
-	border: none;
-	outline: none;
-	border: 1px solid var(--yellow-color);
-	font-weight: 600;
-	cursor: pointer;
+    background: #fed700;
+    background: var(--yellow-color);
+    border: 1px solid #fed700;
+    border: 1px solid var(--yellow-color);
+    color: #cd1e76;
+    color: var(--pink-color);
+    cursor: pointer;
+    font-weight: 600;
+    outline: none;
+    padding: 10px 30px;
+    display: block;
+    margin: auto;
+    margin-top: 25px;
 }
 .cart .container {
 	max-width: 100%;
